syntax = "proto3";

option go_package = "/auth";


message Response{
    int32 status = 1;
    string body = 2;
}

message JwToken{
    string token = 1;
}

message User{
    string userid =1;
    string firstname =2;
    string lastname =3;
    string email = 4;
    string phone = 5;
    string password = 6;
}   

message JwTokenResponse{
    Response response = 1;
    string userid =2;
    
}

message Login{
    string userid = 1;
    string email = 2;
    string password = 3;
}

message LoginResponse {
    Response response  =1;
    string acesstoken = 2;
}

service AuthService{
    rpc LoginService(Login) returns (LoginResponse);
    rpc JwtAuthService(JwToken) returns (JwTokenResponse);
}